# xandeum-observer

./: .env  .gitignore  ADVANCED_FEATURES.md  ADVANCED_FEATURES_IMPLEMENTATION.md  ADVANCED_FEATURES_QUICKSTART.md  CHANGES_SUMMARY.md  COMPETITIVE_ANALYSIS.md  COMPLETE_FEATURE_LIST.md  CONSENSUS_SIMULATOR_EXPLANATION.md  CONTEXT_TRANSFER_STATUS.md  CRITICAL_FEATURES_ADDED.md  DATA_ACCURACY_FIXES.md  DEPLOYMENT_GUIDE.md  Dockerfile  EARNINGS_CALCULATOR_ADDED.md  FEATURES.md  FEATURE_SHOWCASE.md  FINAL_FIXES_COMPLETE.md  FINAL_IMPROVEMENTS.md  FINAL_PRODUCTION_SUMMARY.md  FINAL_SUBMISSION_SUMMARY.md  FINAL_TESTING_CHECKLIST.md  FIXES_SUMMARY.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_COMPLETE.md  LINTING_FIXES_APPLIED.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_READINESS.md  PRODUCTION_READY_CHECKLIST.md  PUSH_TO_PRODUCTION.md  QUICK_FIXES.md  QUICK_FIXES_APPLIED.md  README.md  SMART_APPROACH_COMPLETE.md  WINNING_FEATURES_ADDED.md  WINNING_FEATURES_SUMMARY.md  WINNING_STRATEGY.md  debug_rpc.json  docker-compose.yml  hackmd_guide.md  (+5 more)
server/: index.js  package-lock.json  package.json
server-rust/: Cargo.toml  Dockerfile  xandeum.db
server-rust/src/: db.rs  latency.rs  main.rs
src/: App.tsx  index.css  main.tsx
src/components/: ActivityDistribution.tsx  AnomalyDetectionDashboard.tsx  AvailabilityTimeline.tsx  CollapsibleSection.tsx  CommandMenu.tsx  ComparisonModal.tsx  ConsensusSimulator.tsx  ContractIdentity.tsx  CopyButton.tsx  EarningsCalculator.tsx  EmptyState.tsx  ErrorBoundary.tsx  GlobeVisualization.tsx  GossipFeed.tsx  Header.tsx  HealthScore.tsx  (+41 more)
(+31 files in other folders)
