[package]
name = "server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dashmap = "6.1.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.26", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
xandeum-prpc = "0.1.5"
