[package]
name = "server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dashmap = "5.5.3"
once_cell = "1.19.0"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
rand = "0.8.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
